started working on the display

--- a/display/index.html
+++ b/display/index.html
@@ -1,9 +1,15 @@
 <html>
     <head>
         <title>Form</title>
+        <script defer src="TapDisplay.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        test
+        <tap-display>
+            Beer 1
+            <div   slot="description">
+                abv: 123 ibu: 100 8oz $3.50 | 12oz $3.50 | 16oz $3.50 | 20oz $3.50
+            </div>
+        </tap-display>
     </body>
 </html>
