added more to the list using the sample data

--- a/display/index.html
+++ b/display/index.html
@@ -11,5 +11,77 @@
                 abv: 123 ibu: 100 8oz $3.50 | 12oz $3.50 | 16oz $3.50 | 20oz $3.50
             </div>
         </tap-display>
+        <tap-display>
+            Beer 2
+            <div   slot="description">
+                abv: 123 ibu: 100 8oz $3.50 | 12oz $3.50 | 16oz $3.50 | 20oz $3.50
+            </div>
+        </tap-display>
+        <tap-display>
+            Beer 3
+            <div   slot="description">
+                abv: 123 ibu: 100 8oz $3.50 | 12oz $3.50 | 16oz $3.50 | 20oz $3.50
+            </div>
+        </tap-display>
+        <tap-display>
+            Beer 4
+            <div   slot="description">
+                abv: 123 ibu: 100 8oz $3.50 | 12oz $3.50 | 16oz $3.50 | 20oz $3.50
+            </div>
+        </tap-display>
+        <tap-display>
+            Beer 5
+            <div   slot="description">
+                abv: 123 ibu: 100 8oz $3.50 | 12oz $3.50 | 16oz $3.50 | 20oz $3.50
+            </div>
+        </tap-display>
+        <tap-display>
+            Beer 6
+            <div   slot="description">
+                abv: 123 ibu: 100 8oz $3.50 | 12oz $3.50 | 16oz $3.50 | 20oz $3.50
+            </div>
+        </tap-display>
+        <tap-display>
+            Beer 7
+            <div   slot="description">
+                abv: 123 ibu: 100 8oz $3.50 | 12oz $3.50 | 16oz $3.50 | 20oz $3.50
+            </div>
+        </tap-display>
+        <tap-display>
+            Beer 8
+            <div   slot="description">
+                abv: 123 ibu: 100 8oz $3.50 | 12oz $3.50 | 16oz $3.50 | 20oz $3.50
+            </div>
+        </tap-display>
+        <tap-display>
+            Beer 9
+            <div   slot="description">
+                abv: 123 ibu: 100 8oz $3.50 | 12oz $3.50 | 16oz $3.50 | 20oz $3.50
+            </div>
+        </tap-display>
+        <tap-display>
+            Beer 10
+            <div   slot="description">
+                abv: 123 ibu: 100 8oz $3.50 | 12oz $3.50 | 16oz $3.50 | 20oz $3.50
+            </div>
+        </tap-display>
+        <tap-display>
+            Beer 11
+            <div   slot="description">
+                abv: 123 ibu: 100 8oz $3.50 | 12oz $3.50 | 16oz $3.50 | 20oz $3.50
+            </div>
+        </tap-display>
+        <tap-display>
+            Beer 12
+            <div   slot="description">
+                abv: 123 ibu: 100 8oz $3.50 | 12oz $3.50 | 16oz $3.50 | 20oz $3.50
+            </div>
+        </tap-display>
+        <tap-display>
+            Beer 1
+            <div   slot="description">
+                abv: 123 ibu: 100 8oz $3.50 | 12oz $3.50 | 16oz $3.50 | 20oz $3.50
+            </div>
+        </tap-display>
     </body>
 </html>
