split the list in two

--- a/display/index.html
+++ b/display/index.html
@@ -3,6 +3,12 @@
         <title>Form</title>
         <script defer src="TapDisplay.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <style>
+            body {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+            }
+        </style>
     </head>
     <body>
         <tap-display>
