adds post and get for data

--- a/display/index.html
+++ b/display/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Form</title>
         <script defer src="TapDisplay.js"></script>
+        <script defer src="dataFetch.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
         <style>
             body {
